update server
